[build-system]
requires      = ['poetry-core>=1.3']
build-backend = 'poetry.core.masonry.api'

[tool.metadata]
display_name  = 'reunion 2024 github'
package_name  = 'solution-reunion-2024-github'
lib_name      = 'solution_reunion_2024_github'

[tool.poetry]
name        = 'solution-reunion-2024-github'
version     = '0.1.0'
description = 'Lime CRM solution'
authors     = ['Author <author@lime.tech>']

[[tool.poetry.source]]
name = 'lime'
url  = 'https://pypi.lime.tech/simple/'

[tool.poetry.plugins.lime_plugins]
'solution-reunion-2024-github' = 'solution_reunion_2024_github'

[tool.poetry.dependencies]
python = '^3.11'
lime-crm = '2.882.0'
limepkg-ldc = '^1.4.3'
lime-core-cloud = '^1.41.2'
limepkg-filter-editor = '^1.0.5'
limepkg-status-flow = '^2.0.1'
addon-infotiles = '^4.9.2'
limepkg-gdpr = '^3.0.1'
limepkg-option-visualizer = '^2.1.0'
limepkg-demo-date-mover = '^1.1.1'
limepkg-maps = "^4.6.0"

[tool.poetry.group.dev.dependencies]
autopep8 = '>=1'
pytest = '>=6.2.3'
flake8 = '^3.7'
black = '^22.1.0'
isort = '^5.0.0'

[tool.lime]
[tool.lime.project]
project_version = '1.231.3'
project_type    = 'solution'
project_target  = 'limecloud'


[tool.pytest.ini_options]
minversion = '6.0'
norecursedirs = [
    'venv',
    '.venv',
    'build',
    'dist',
    '.plugins',
    'frontend',
    '.env',
    '.git',
    '.github',
    '.lime',
    '.vscode'
]
faulthandler_timeout = 300

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | frontend
  | poetry.lock
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3
